--- a/src/Components/DashBoard/DashBoard.scss
+++ b/src/Components/DashBoard/DashBoard.scss
@@ -1,3 +1,50 @@
 .dashboard-container {
+	.form-container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 25px 0;
 	
+		.contact-form {
+			width: 75%;
+			max-width: 900px;
+	
+			input[type=number] {
+				width: 100%;
+				padding: 12px;
+				border: 1px solid #ccc;
+				border-radius: 4px;
+				box-sizing: border-box;
+				margin-top: 6px;
+				margin-bottom: 16px;
+				resize: vertical;
+			}
+		
+			input[type=submit] {
+				background-color: #141CDE;
+				color: white;
+				padding: 12px 20px;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+				font-weight: bold;
+				text-transform: uppercase;
+			}
+		
+			input[type=submit]:hover {
+				background-color: #1117BB;
+				box-shadow: 0 5px 18px #1117BB;
+			}
+		
+			.form-label {
+				display: block;
+				margin: 10px 0 0;
+			}
+		
+			.required-symbol {
+				color: #E80000;
+			}
+		}
+	}
 }
