--- a/src/Components/Chart/Chart.scss
+++ b/src/Components/Chart/Chart.scss
@@ -1,3 +1,7 @@
 .chart-container {
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 0 50px;
 }
