--- a/src/Components/Chart/Chart.scss
+++ b/src/Components/Chart/Chart.scss
@@ -5,7 +5,61 @@
 	justify-content: center;
 	padding: 0 50px;
 
-	.axis-grid line {
-		stroke: #DEF;
+	#charts {
+		position: relative;
+		
+		.chart {
+			margin: 0.9em 0;
+
+			.axis-grid line {
+				stroke: #DEF;
+			}
+
+			.listener-rect {
+				fill: transparent;
+			}
+		}
+	
+		.tooltip {
+			opacity: 0;
+			position: absolute;
+			top: -14px;
+			left: 0;
+			padding: 0.6em 1.2em;
+			background: #FFF;
+			text-align: center;
+			line-height: 1.5em;
+			font-size: 0.9em;
+			border: 3px solid #DDD;
+			border-radius: 9px;
+			box-shadow: 6px 0 9px rgba(0,0,0,0.3);
+			z-index: 1;
+			transition: all 0.3s ease-out;
+			pointer-events: none;
+		}
+		
+		.tooltip:before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			width: 12px;
+			height: 12px;
+			background: #FFF;
+			border: 1px solid #DDD;
+			border-top-color: transparent;
+			border-left-color: transparent;
+			transform: translate(-50%, 50%) rotate(45deg);
+			box-shadow: 0 9px 0 rgba(0,0,0,0.3);
+			transform-origin: center center;
+			z-index: 1;
+		}
+		
+		.tooltip-timestamp {
+			margin-bottom: 0.2em;
+			font-weight: 600;
+			font-size: 1.1em;
+			line-height: 1.4em;
+		}
 	}
 }
