Add circular point that follows current point
- Currently on y-axis is updating

--- a/src/Components/Chart/Chart.scss
+++ b/src/Components/Chart/Chart.scss
@@ -61,5 +61,13 @@
 			font-size: 1.1em;
 			line-height: 1.4em;
 		}
+
+		.tooltip-circle {
+			stroke: #DB162F;
+			fill: #FFF;
+			stroke-width: 2;
+			opacity: 0;
+			pointer-events: none;
+		}
 	}
 }
