--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,11 @@
 	padding: 0;
 }
 
+/* Helper Styles */
+.bold-text {
+	font-weight: bold;
+}
+
 .app-container {
 	.app-header {
 		text-align: center;
